--- a/n64/Makefile.modern
+++ b/n64/Makefile.modern
@@ -8,7 +8,7 @@ LIB = $(ROOT)/usr/lib
 LPR = $(LIB)/PR
 INC = $(ROOT)/usr/include
 
-LCDEFS = -DNU_DEBUG -DF3DEX_GBI_2 -DN64
+LCDEFS = -DDEBUG -DNU_DEBUG -DF3DEX_GBI_2 -DN64
 LCINCS = -I. -I$(NUSTDINCDIR) -I$(NUSYSINCDIR) -I$(ROOT)/usr/include/PR
 LCOPTS = -G 0 -O2
 LDFLAGS = $(MKDEPOPT) -L$(LIB) -L$(NUSYSLIBDIR) -ln_mus_d -lnualstl_n_d -ln_audio_sc -lnusys_d -lultra_d -L$(N64_LIBGCCDIR) -lgcc -lnustd
