More improvements to consistency and portability

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ if(MSVC)
     )
 else()
     set(OpenGL_GL_PREFERENCE "LEGACY")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wno-long-long -pedantic")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wno-long-long -pedantic -Wdeclaration-after-statement")
     if(EMSCRIPTEN)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s USE_SDL=2 --closure 0 -Wno-gnu-zero-variadic-macro-arguments")
     else()
