Clean up code based on clang-tidy recommendations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ else()
     set(OpenGL_GL_PREFERENCE "LEGACY")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wno-long-long -pedantic -Wdeclaration-after-statement")
     if(EMSCRIPTEN)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s USE_SDL=2 --closure 0 -Wno-gnu-zero-variadic-macro-arguments")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s USE_SDL=2 -Wno-gnu-zero-variadic-macro-arguments")
     else()
         include(FindPkgConfig)
         pkg_search_module(SDL2 REQUIRED sdl2)
