Render leaderboard using new api and fix various bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
     message(FATAL_ERROR "You must set your binary directory different from your source")
 endif()
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
 
 if(MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
